# bushfire-burn-severity-mapper

./: .gitignore  LICENSE  README.md  deep-research-report.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
LICENSES/: aus_geebam.txt  copernicus_sentinel.txt  dea.txt  niafed.txt
configs/: config.yaml
configs/aois/: currowan_2019_2020.geojson  east_gippsland_2019_2020.geojson  gospers_mountain_2019_2020.geojson  kangaroo_island_2019_2020.geojson
configs/experiments/: baseline_dnbr.yaml  rf_multiclass.yaml  segformer_multiclass.yaml  smoke_unet.yaml  unet_multiclass.yaml  xgb_multiclass.yaml
docs/: architecture.md  data_dictionary.md  model_card.md
docs/demo/: kangaroo_slider.html  non_expert_panel.md
docs/reviews/: M12_codex_review.md  M1_codex_review.md
notebooks/: 01_dataset_audit.ipynb  09_readme_figures.ipynb  burn_severity_story.ipynb
scripts/: align_labels_to_composite.py  compute_real_calibration.py  fetch_event_streamlined.py  fetch_remaining_aois.sh  make_fixture_tiles.py  predict_training_aois.py  render_hero_figures.py  run_all_events.sh  run_kangaroo_chain.sh  run_pipeline.sh  score_training_aois.py  setup_env.sh
src/data/: class_map.py  cloud_mask.py  fetch_labels.py  fetch_sentinel.py  preprocess.py  tiling.py
src/evaluation/: calibration.py  evaluate.py  metrics.py  stratified_reports.py
src/features/: indices.py  stack_features.py
src/models/: baselines.py  datasets.py  losses.py  run_baseline.py  segformer_model.py  tabular_dataset.py  train_rf.py  train_segformer.py  train_segmenter.py  train_unet.py  train_xgb.py  unet_model.py
src/utils/: config.py  geo.py  io.py  logging_utils.py  provenance.py  seed.py
tests/: test_baselines.py  test_class_map.py  test_cli_overrides.py  test_cloud_mask.py  test_config.py  test_deep_models.py  test_evaluation.py  test_fetch_labels.py  test_geo.py  test_indices.py  test_provenance.py  test_smoke_classical.py  test_stack_features.py
(+16 files in other folders)
