[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bushfire-burn-severity-mapper"
version = "0.1.0"
description = "Retrospective Australian bushfire burn severity mapping from Sentinel-2 imagery"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ahmad Jaradat" }]
keywords = ["sentinel-2", "bushfire", "burn-severity", "remote-sensing", "segmentation"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3.9",
    "rioxarray>=0.15",
    "xarray>=2024.1",
    "dask>=2024.1",
    "odc-stac>=0.3.9",
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "contextily>=1.5",
    "folium>=0.16",
    "tqdm>=4.66",
    "omegaconf>=2.3",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dl = [
    "torch>=2.4",
    "torchvision>=0.19",
    "segmentation-models-pytorch>=0.3.4",
    "transformers>=4.40",
    "torchmetrics>=1.3",
    "tensorboard>=2.16",
    "albumentations>=1.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "nbconvert>=7.16",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
